---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
/**
 * @returns {string}
 */
function foo() {}

export { foo, qux };

/** @package */
export function bar() {}

/** @private */
export const quz = {};

/* @ignored because of incorrect amount of asterisks */
export async function baz() {}

var qux = 1;

export const {
	a,
	b,
	c: [d, e],
} = getObject();

type GetObjectResult = {
	a: string;
	b: Array<number>;
	c: [first: boolean, last: boolean | undefined];
};

function getObject(): GetObjectResult {
	return {}; // We're not a type checker, so this is a-okay.
}

/**
 * @public
 * @returns {JSX.Element}
 */
export default function Component(): JSX.Element {}

export * from "./reexports";
export { ohNo as "oh\x0Ano" } from "./renamed-reexports";

/**
 * Hello, namespace 2.
 */
export * as renamed2 from "./renamed-reexports";
```

## Module Info

```
Exports {
  "foo" => {
    ExportOwnExport => JsOwnExport::Binding(87..90)
  }
  "qux" => {
    ExportOwnExport => JsOwnExport::Binding(389..392)
  }
  "bar" => {
    ExportOwnExport => JsOwnExport::Binding(187..190)
  }
  "quz" => {
    ExportOwnExport => JsOwnExport::Binding(250..253)
  }
  "baz" => {
    ExportOwnExport => JsOwnExport::Binding(363..366)
  }
  "a" => {
    ExportOwnExport => JsOwnExport::Binding(426..427)
  }
  "b" => {
    ExportOwnExport => JsOwnExport::Binding(429..430)
  }
  "d" => {
    ExportOwnExport => JsOwnExport::Binding(436..437)
  }
  "e" => {
    ExportOwnExport => JsOwnExport::Binding(439..440)
  }
  "default" => {
    ExportOwnExport => JsOwnExport::Binding(909..918)
  }
  "oh\nno" => {
    ExportReexport => Reexport(
      Specifier: "./renamed-reexports"
      Resolved path: "/src/renamed-reexports.ts"
      Import Symbol: ohNo
    )
  }
  "renamed2" => {
    ExportOwnExport => JsOwnExport::Namespace(Reexport(
      Specifier: "./renamed-reexports"
      Resolved path: "/src/renamed-reexports.ts"
      Import Symbol: All
      Exported range: (1129..1177)
    ))
  }
}
Imports {
  No imports
}
```


# `/src/reexports.ts`

## Source

```ts
/**
 * Hello, namespace 1.
 */
export * as renamed from "./renamed-reexports";
```

## Module Info

```
Exports {
  "renamed" => {
    ExportOwnExport => JsOwnExport::Namespace(Reexport(
      Specifier: "./renamed-reexports"
      Resolved path: "/src/renamed-reexports.ts"
      Import Symbol: All
      Exported range: (80..127)
    ))
  }
}
Imports {
  No imports
}
Side-effect imports: [
  "./renamed-reexports" => /src/renamed-reexports.ts,
]
```


# `/src/renamed-reexports.ts`

## Source

```ts
export function ohNo() {}
```

## Module Info

```
Exports {
  "ohNo" => {
    ExportOwnExport => JsOwnExport::Binding(29..33)
  }
}
Imports {
  No imports
}
```
